--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link rel="stylesheet" href="style/reset.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>AluraBooks</h1>
+    <header class="cabecalho">
+        <div class="container">
+            <span class="cabecalho__menu-hamburguer container__imagens"></span>
+            <img class="container__imagens" src="assets/Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img class="container__imagens" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img class="container__imagens" src="assets/Compras.svg" alt="Carrinho de Compras"></a>
+            <a href="#"><img class="container__imagens" src="assets/Usuário.svg" alt="Usuário"></a>
+        </div>
+    </header>
 </body>
+
 </html>
