--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 <body>
     <header class="cabecalho">
         <div class="container">
-            <span class="cabecalho__menu-hamburguer container__imagens"></span>
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <span class="cabecalho__menu-hamburguer container__imagens"></span>
+            </label>
+            <ul class="container__lista-menu">
+                <li class="conntainer__lista-menu__item">
+                    Categoria
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Programaçao</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Front</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Infra</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Business</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Design e UX</a>
+                </li>
+            </ul>
             <img class="container__imagens" src="assets/Logo.svg" alt="Logo da AluraBooks">
         </div>
         <div class="container">
