Criação da sessão tópicos

--- a/index.html
+++ b/index.html
@@ -156,6 +156,37 @@
             </div>
         </div>
     </section>
+    <section class="topico">
+        <h2 class="topico__titulo">
+            TÓPICOS VISITADOS RECENTEMENTE
+        </h2>
+        <ul class="topico__lista">
+            <li class="topico__item">
+                <a href="#">Android</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">Marketing Digital</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">Agile</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">Startups</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">HTML & CSS</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">Python</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">OO</a>
+            </li>
+            <li class="topico__item">
+                <a href="#">Java</a>
+            </li>
+        </ul>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
