--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
@@ -43,9 +47,15 @@
                 </li>
             </ul>
             <img class="container__imagens" src="assets/Logo.svg" alt="Logo da AluraBooks">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+        <ul class="opcoes">
+            <li class="opcoes__item">Categoria</li>
+            <li class="opcoes__item"><a class="opcoes__link" href="#">Favoritos</a></li>
+            <li class="opcoes__item"><a class="opcoes__link" href="#">Minha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#"><img class="container__imagens" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img class="container__imagens container__imagem-transparente" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
             <a href="#"><img class="container__imagens" src="assets/Compras.svg" alt="Carrinho de Compras"></a>
             <a href="#"><img class="container__imagens" src="assets/Usuário.svg" alt="Usuário"></a>
         </div>
@@ -120,12 +130,9 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/Arquitetura.svg"
-                        alt="Livro sobre arquitetura"></div>
-                <div class="swiper-slide"><img src="assets/Construct2.svg"
-                        alt="Livro sobre construct"></div>
-                <div class="swiper-slide"><img src="assets/Gestão2.svg"
-                        alt="Livro sobre Gestão 2"></div>
+                <div class="swiper-slide"><img src="assets/Arquitetura.svg" alt="Livro sobre arquitetura"></div>
+                <div class="swiper-slide"><img src="assets/Construct2.svg" alt="Livro sobre construct"></div>
+                <div class="swiper-slide"><img src="assets/Gestão2.svg" alt="Livro sobre Gestão 2"></div>
                 <div class="swiper-slide"><img src="assets/MEAN.svg" alt="Livro sobre Mean"></div>
                 <div class="swiper-slide"><img src="assets/MetricasAgeis.svg" alt="Livro sobre Metricas ageis"></div>
                 <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX"></div>
@@ -142,7 +149,8 @@
                     <img class="descricao__estrela" src="assets/Estrelinhas.svg" alt="estrelas">
                     <h3 class="descricao__titulo">Autora do Mês</h3>
                     <h2 class="nome__autor">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                    </p>
                 </div>
                 <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Autora Juliana Agarikov">
             </div>
@@ -196,7 +204,7 @@
         </p>
         <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
     </section>
-    <hr / >
+    <hr />
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
     </footer>
