finalizando o header na tela de tablet

--- a/index.html
+++ b/index.html
@@ -50,12 +50,33 @@
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
         <ul class="opcoes">
-            <li class="opcoes__item">Categoria</li>
+            <input type="checkbox" id="menu-opcoes" class="opcoes__botao">
+            <label for="menu-opcoes">
+                <li class="opcoes__item">Categoria</li>
+            </label>
+            <ul class="container__lista-menu">
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Programaçao</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Front</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Infra</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Business</a>
+                </li>
+                <li class="conntainer__lista-menu__item">
+                    <a href="#" class="conntainer__lista-menu__item__link">Design e UX</a>
+                </li>
+            </ul>
             <li class="opcoes__item"><a class="opcoes__link" href="#">Favoritos</a></li>
             <li class="opcoes__item"><a class="opcoes__link" href="#">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"><img class="container__imagens container__imagem-transparente" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img class="container__imagens container__imagem-transparente" src="assets/Favoritos.svg"
+                    alt="Meus Favoritos"></a>
             <a href="#"><img class="container__imagens" src="assets/Compras.svg" alt="Carrinho de Compras"></a>
             <a href="#"><img class="container__imagens" src="assets/Usuário.svg" alt="Usuário"></a>
         </div>
