finalizado carrosel no tablet

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- 1º Carrosel -->
     <section class="carrosel">
         <h2 class="carrosel__titulo">
-            Novos lançamentos
+            ÚLTIMOS LANÇAMENTOS
         </h2>
         <!-- Slider main container -->
         <div class="swiper">
@@ -141,7 +141,7 @@
     <!-- 2º Carrosel-->
     <section class="carrosel">
         <h2 class="carrosel__titulo">
-            Novos lançamentos
+            MAIS VENDIDOS
         </h2>
         <!-- Slider main container -->
         <div class="swiper">
