finalizando modelo do tablet

--- a/index.html
+++ b/index.html
@@ -230,6 +230,76 @@
     <hr />
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <!-- uma outra forma de resolver o mesmo problema -->
+        <div class="rodape__educacao">
+            <h3 class="rodape__educacao__titulo">Educação</h3>
+            <div class="rodape__educacao__item">
+                <img src="assets/Caelum.svg" alt="logo Caelum">
+                <p class="rodape__educacao__item__texto">Caelum</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/CasaDoCodigo.svg" alt="logo Casa do Código">
+                <p class="rodape__educacao__item__texto">Caelum</p>
+            </div>
+        </div>
+        <div class="rodape__educacao">
+            <h3 class="rodape__educacao__titulo">EDUCAÇÃO ONLINE</h3>
+            <div class="rodape__educacao__item">
+                <img src="assets/Alura.svg" alt="logo Alura">
+                <p class="rodape__educacao__item__texto">Alura</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/AluraEmpresas.svg" alt="logo Alura para empresas">
+                <p class="rodape__educacao__item__texto">Alura Para Empresas</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/AluraStart.svg" alt="logo Alura Start">
+                <p class="rodape__educacao__item__texto">Alura Start</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/MusicDot.svg" alt="logo MusicDot">
+                <p class="rodape__educacao__item__texto">MusicDot</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/AluraLingua.svg" alt="logo Alura Língua">
+                <p class="rodape__educacao__item__texto">Alura Língua</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/PM3.svg" alt="logo PM3">
+                <p class="rodape__educacao__item__texto">PM3</p>
+            </div>
+        </div>
+        <div class="rodape__educacao">
+            <h3 class="rodape__educacao__titulo">COMUNIDADE</h3>
+            <div class="rodape__educacao__item">
+                <img src="assets/HipstersTech.svg" alt="logo Hipsters ponto Tech">
+                <p class="rodape__educacao__item__texto">Hipsters ponto Tech</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/ScubaDev.svg" alt="logo Scuba Dev">
+                <p class="rodape__educacao__item__texto">Scuba Dev</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/LayersTech.svg" alt="logo Layers ponto Tech">
+                <p class="rodape__educacao__item__texto">Layers ponto Tech</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/LikeABoss.svg" alt="logo Like a Boss">
+                <p class="rodape__educacao__item__texto">Like a Boss</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/CarreiraSemFronteira.svg" alt="logo Carreira sem Fronteira">
+                <p class="rodape__educacao__item__texto">Carreira sem Fronteira</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/HipstersJobs.svg" alt="logo Hipsters ponto Jobs">
+                <p class="rodape__educacao__item__texto">Hipsters ponto Jobs</p>
+            </div>
+            <div class="rodape__educacao__item">
+                <img src="assets/GUJ.svg" alt="logo GUJ">
+                <p class="rodape__educacao__item__texto">GUJ</p>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
