Evolução do header para descktop

--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
         <div class="container">
             <a href="#"><img class="container__imagens container__imagem-transparente" src="assets/Favoritos.svg"
                     alt="Meus Favoritos"></a>
-            <a href="#"><img class="container__imagens" src="assets/Compras.svg" alt="Carrinho de Compras"></a>
-            <a href="#"><img class="container__imagens" src="assets/Usuário.svg" alt="Usuário"></a>
+            <a href="#" class="container__link">
+                <img class="container__imagens" src="assets/Compras.svg" alt="Carrinho de Compras">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img class="container__imagens" src="assets/Usuário.svg" alt="Usuário">
+                <p class="container__texto">Minha conta</p>
+            </a>
         </div>
     </header>
     <section class="banner">
