--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagens"></span>
             </label>
             <ul class="container__lista-menu">
@@ -51,7 +51,7 @@
         </div>
         <ul class="opcoes">
             <input type="checkbox" id="menu-opcoes" class="opcoes__botao">
-            <label for="menu-opcoes">
+            <label for="menu-opcoes" class="opcoes__rotulo">
                 <li class="opcoes__item">Categoria</li>
             </label>
             <ul class="container__lista-menu">
@@ -101,46 +101,50 @@
         <h2 class="carrosel__titulo">
             ÚLTIMOS LANÇAMENTOS
         </h2>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="carrosel__container">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
-                        alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                <div class="swiper-slide"><img src="assets/Liderança.svg"
-                        alt="Livro sobre liderança em design da alura books"></div>
-                <div class="swiper-slide"><img src="assets/Javascript.svg"
-                        alt="Livro sobre JavaScript assertivo da alura books"></div>
-                <div class="swiper-slide"><img src="assets/Guia Front-end.svg" alt="Livro guia front end"></div>
-                <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre Portugol"></div>
-                <div class="swiper-slide"><img src="assets/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <div class="card">
-            <!-- 1º linha -->
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                            alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="assets/Liderança.svg"
+                            alt="Livro sobre liderança em design da alura books"></div>
+                    <div class="swiper-slide"><img src="assets/Javascript.svg"
+                            alt="Livro sobre JavaScript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="assets/Guia Front-end.svg" alt="Livro guia front end"></div>
+                    <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre Portugol"></div>
+                    <div class="swiper-slide"><img src="assets/Acessibilidade.svg" alt="Livro sobre Acessibilidade">
+                    </div>
                 </div>
-                <img class="descricao__imagem" src="assets/Angular.svg" alt="Livro de Angular">
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- 2º linha -->
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compra"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais...</a>
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img class="descricao__imagem" src="assets/Angular.svg" alt="Livro de Angular">
+                </div>
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compra">
+                        </li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais...</a>
+                </div>
             </div>
         </div>
     </section>
@@ -149,45 +153,50 @@
         <h2 class="carrosel__titulo">
             MAIS VENDIDOS
         </h2>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="carrosel__container">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/Arquitetura.svg" alt="Livro sobre arquitetura"></div>
-                <div class="swiper-slide"><img src="assets/Construct2.svg" alt="Livro sobre construct"></div>
-                <div class="swiper-slide"><img src="assets/Gestão2.svg" alt="Livro sobre Gestão 2"></div>
-                <div class="swiper-slide"><img src="assets/MEAN.svg" alt="Livro sobre Mean"></div>
-                <div class="swiper-slide"><img src="assets/MetricasAgeis.svg" alt="Livro sobre Metricas ageis"></div>
-                <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX"></div>
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <div class="card">
-            <!-- 1º linha -->
-            <div class="card__descricao">
-                <div class="descricao card__descricao__div">
-                    <img class="descricao__estrela" src="assets/Estrelinhas.svg" alt="estrelas">
-                    <h3 class="descricao__titulo">Autora do Mês</h3>
-                    <h2 class="nome__autor">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/Arquitetura.svg" alt="Livro sobre arquitetura"></div>
+                    <div class="swiper-slide"><img src="assets/Construct2.svg" alt="Livro sobre construct"></div>
+                    <div class="swiper-slide"><img src="assets/Gestão2.svg" alt="Livro sobre Gestão 2"></div>
+                    <div class="swiper-slide"><img src="assets/MEAN.svg" alt="Livro sobre Mean"></div>
+                    <div class="swiper-slide"><img src="assets/MetricasAgeis.svg" alt="Livro sobre Metricas ageis">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX"></div>
                 </div>
-                <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Autora Juliana Agarikov">
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- 2º linha -->
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compra"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais...</a>
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <div class="descricao card__descricao__div">
+                        <img class="descricao__estrela" src="assets/Estrelinhas.svg" alt="estrelas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="nome__autor">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Autora Juliana Agarikov">
+                </div>
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__itens"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__itens"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compra">
+                        </li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais...</a>
+                </div>
             </div>
         </div>
     </section>
